--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             align-items: center;
             flex-wrap: wrap;
             gap: 20px;
-            margin-top: 50px;
+            margin-top: 20px;
         }
 
         .button {
@@ -141,6 +141,10 @@
 
         /* Estilos para tamanhos de tela menores (tablets e dispositivos móveis) */
         @media (max-width: 768px) {
+            .button-container {
+                margin-top: 10px;
+            }
+
             .button {
                 width: 150px;
                 height: 60px;
