--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Portfólio Profissional</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* Estilos gerais */
         body {
             margin: 0;
             padding: 0;
@@ -16,7 +15,6 @@
             text-align: center;
         }
 
-        /* Estilos da barra superior */
         .top-bar {
             background-color: black;
             padding: 10px 20px;
@@ -28,7 +26,6 @@
             margin: 0 15px;
         }
 
-        /* Estilos do conteúdo */
         .content {
             text-align: center;
             padding: 50px 20px;
@@ -41,7 +38,6 @@
             color: white;
         }
 
-        /* Estilos dos botões */
         .button-container {
             display: flex;
             justify-content: center;
@@ -76,7 +72,6 @@
             box-shadow: 0px 15px 20px rgba(125, 58, 255, 0.4);
         }
 
-        /* Estilos da seção Sobre */
         #sobre {
             background-image: linear-gradient(to bottom right, black, purple);
             color: white;
@@ -107,25 +102,24 @@
             margin-bottom: 20px;
         }
 
-        /* Estilos da seção de habilidades */
         .skills-section {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            margin-top: 50px;
-            gap: 20px;
+            margin-top: 30px;
+            gap: 10px;
         }
 
         .skill-button {
-            width: 120px;
-            height: 120px;
+            width: 130px;
+            height: 50px;
             background-color: purple;
             color: white;
-            border: 5px solid #ffffff;
-            font-size: 1em;
+            border: 3px solid #ffffff;
+            font-size: 0.9em;
             font-weight: bold;
-            border-radius: 50%;
+            border-radius: 10px;
             cursor: pointer;
             transition: all 0.3s ease;
             display: flex;
@@ -139,7 +133,6 @@
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
         }
 
-        /* Estilos para tamanhos de tela menores (tablets e dispositivos móveis) */
         @media (max-width: 768px) {
             .button-container {
                 margin-top: 10px;
@@ -157,10 +150,33 @@
             }
 
             .skill-button {
-                width: 100px;
-                height: 100px;
-                font-size: 0.9em;
+                width: 110px;
+                height: 40px;
+                font-size: 0.8em;
             }
+        }
+
+        .contact-icons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+            gap: 20px;
+        }
+
+        .contact-icons a {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 3px solid white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.3s ease;
+        }
+
+        .contact-icons a:hover {
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -175,9 +191,9 @@
     </div>
 
     <div class="button-container">
+        <a href="https://fresh-uncle-a01.notion.site/Portif-lio-Lud-68e37a492b124d75bf887a8bf979bebf" class="button" target="_blank">Trabalhos</a>
         <button class="button" onclick="scrollToSection('habilidades')">Habilidades</button>
-        <button class="button" onclick="scrollToSection('trabalhos')">Trabalhos</button>
-        <button class="button" onclick="scrollToSection('contato')">Contato</button>
+        <a href="#contato" class="button">Contato</a>
     </div>
 
     <div id="sobre">
@@ -194,7 +210,6 @@
         </div>
     </div>
 
-    <!-- Seção de habilidades -->
     <div id="habilidades" class="skills-section">
         <button class="skill-button">Criatividade</button>
         <button class="skill-button">Compromisso</button>
@@ -204,8 +219,17 @@
         <button class="skill-button">Agilidade</button>
     </div>
 
+    <div id="contato" class="contact-icons">
+        <a href="https://github.com/luudnobre" target="_blank"><img src="GitHub-Mark-ea2971cee799.png" alt="GitHub"></a>
+        <a href="https://whatsapp.com/558186670193" target="_blank"><img src="wpp.png" alt="WhatsApp"></a>
+        <a href="https://youtube.com/channel/UCgKut0Z_zVcYZhP3GuIqIiw" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+    </div>
+
     <script>
-        // Seu código JavaScript pode ser adicionado aqui, se necessário.
+        function scrollToSection(sectionId) {
+            var section = document.getElementById(sectionId);
+            section.scrollIntoView({ behavior: 'smooth' });
+        }
     </script>
 </body>
 
