--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
                 height: 40px;
                 font-size: 0.8em;
             }
+
+            .contact-icons a img {
+                width: 30px;
+                height: 30px;
+            }
         }
 
         .contact-icons {
@@ -165,13 +170,13 @@
         }
 
         .contact-icons a {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            border: 3px solid white;
             display: flex;
             justify-content: center;
             align-items: center;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            border: 3px solid white;
             transition: transform 0.3s ease;
         }
 
@@ -220,9 +225,9 @@
     </div>
 
     <div id="contato" class="contact-icons">
-        <a href="https://github.com/luudnobre" target="_blank"><img src="GitHub-Mark-ea2971cee799.png" alt="GitHub"></a>
-        <a href="https://whatsapp.com/558186670193" target="_blank"><img src="wpp.png" alt="WhatsApp"></a>
-        <a href="https://youtube.com/channel/UCgKut0Z_zVcYZhP3GuIqIiw" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+        <a href="https://github.com/luudnobre" target="_blank"><img src="" alt="GitHub"></a>
+        <a href="https://whatsapp.com/558186670193" target="_blank"><img src="" alt="WhatsApp"></a>
+        <a href="https://youtube.com/channel/UCgKut0Z_zVcYZhP3GuIqIiw" target="_blank"><img src="" alt="YouTube"></a>
     </div>
 
     <script>
