--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <div id="habilidades" class="skills-section">
         <button class="skill-button">Criatividade</button>
         <button class="skill-button">Compromisso</button>
-        <button class="skill-button">Habilidade com Tecnologia</button>
+        <button class="skill-button">Tecnologia</button>
         <button class="skill-button">Inteligência Emocional</button>
         <button class="skill-button">Inglês Intermediário</button>
         <button class="skill-button">Agilidade</button>
