--- a/index.html
+++ b/index.html
@@ -225,10 +225,12 @@
     </div>
 
     <div id="contato" class="contact-icons">
-        <a href="https://github.com/luudnobre" target="_blank"><img src="" alt="GitHub"></a>
-        <a href="https://whatsapp.com/558186670193" target="_blank"><img src="" alt="WhatsApp"></a>
-        <a href="https://youtube.com/channel/UCgKut0Z_zVcYZhP3GuIqIiw" target="_blank"><img src="" alt="YouTube"></a>
+        <a href="https://instagram.com/ludcopy" target="_blank"><img src="insta.png" alt="Instagram" width="40"></a>
+        <a href="https://github.com/luudnobre" target="_blank"><img src="GitHub-Mark-ea2971cee799.png" alt="GitHub" width="40"></a>
+        <a href="https://whatsapp.com/558186670193" target="_blank"><img src="wpp.png" alt="WhatsApp" width="40"></a>
+        <a href="https://youtube.com/channel/UCgKut0Z_zVcYZhP3GuIqIiw" target="_blank"><img src="youtube.png" alt="YouTube" width="40"></a>
     </div>
+    
 
     <script>
         function scrollToSection(sectionId) {
