--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Portfólio Profissional</title>
+    <title>Portifólio Lud Copywriter </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
